Change build system to gradle, improve documentation